responsiveness added to homepage

--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -175,6 +175,7 @@ img {
 
 @import "form";
 
+// DELETED FORM CODE AND PUT IT IN A PARTIAL.
 // .form-user-info {
 //     display: flex;
 //     justify-content: space-between;
