--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -4,6 +4,7 @@
 nav {
     display: flex;
     justify-content: flex-end;
+    // justify-content: center;
     align-items: center;
     ul {
         display: flex;
